# how-to-compile-your-language

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.MD  grammar.md  grammar.txt  main.al  mangling.md
.github/workflows/: deploy.yml  main.yml  pipeline.yml
examples/: fibonacci_sequence.yl  minsky_machine.yl  prime_numbers.yl
include/: ast.h  cfg.h  codegen.h  constexpr.h  diag.h  lexer.h  parser.h  res.h  sema.h  token.h  type.h  utils.h
runtime/: CMakeLists.txt  gc.c
src/: CMakeLists.txt  ast.cpp  cfg.cpp  codegen.cpp  compiler.cpp  constexpr.cpp  diag.cpp  driver.cpp  lexer.cpp  main.cpp  parser.cpp  res.cpp  sema.cpp  type.cpp  utils.cpp
test/: .gitignore  CMakeLists.txt  lit.cfg.py  requirements.txt
test/cfg/: arguments.al  arguments.yl  assignment.al  assignment.yl  condition.al  condition.yl  empty_fn.al  empty_fn.yl  grouping.yl  if_statement.al  if_statement.yl  lambda.yl  path.yl  resolution_error.yl  return.al  return.yl  return_in_cond.al  return_in_cond.yl  unary.yl  unit.yl  while.al  while.yl
test/codegen/: alloca_order.al  alloca_order.yl  bool_function_params.yl  call_evaluation_order.yl  compare_bool_values.yl  cond_binop_side_effect.al  cond_binop_side_effect.yl  condition_bool_variable.yl  condition_empty_merge.al  condition_empty_merge.yl  constexpr.yl  empty_struct.yl  empty_struct_nested.yl  expressions.al  expressions.yl  if_conditional_binop_condition.yl  lazy_init_variable.yl  main_wrapper.yl  module_setup.al  module_setup.yl  multiple_return.al  multiple_return.yl  multiple_return_if.al  multiple_return_if.yl  multiple_return_while.al  multiple_return_while.yl  negate_bool_value.yl  optimized_let_address_needed.yl  pointer_comparison.yl  print.al  println.yl  return.yl  returned_value_address_needed.yl  treat_constant_expressions_as_rvalue.yl  unary_negate.yl  unit_member_expr.yl  unit_mut.yl  unit_struct_field.yl  unit_type.yl  unit_type_complex.yl  (+4 more)
test/constexpr/: address_is_not_constexpr.yl  args.al  args.yl  grouping.al  grouping.yl  (+5 more)
www/: codegen.html  constexpr.html  control-flow.html  driver.html  extending-the-parser.html  index.html  lexing.html  operators.html  parsing.html  sema.html  structs.html  variables.html
(+646 files in other folders)
